# flutter_blue_plus_linux

./: LICENSE  README.md
dbus_cpp/: CMakeLists.txt  main.cpp
dbus_cpp/include/: connection.h  exceptions.h
dbus_cpp/src/: connection.cc
dbuschanneltest/: README.md  pubspec.yaml
dbuschanneltest/android/app/: build.gradle
dbuschanneltest/ios/Runner/: Info.plist
dbuschanneltest/ios/Runner.xcodeproj/: project.pbxproj
dbuschanneltest/lib/: dbuschannel.dart  main.dart
dbuschanneltest/lib/bplus/: flutter_blue_plus_method_channel.dart
dbuschanneltest/lib/screens/: bluetooth_off_screen.dart  device_screen.dart  scan_screen.dart
dbuschanneltest/lib/utils/: extra.dart  snackbar.dart
dbuschanneltest/lib/widgets/: characteristic_tile.dart  descriptor_tile.dart  scan_result_tile.dart  service_tile.dart  system_device_tile.dart
dbuschanneltest/linux/: CMakeLists.txt  flutter_blue_plus_plugin.hpp  main.cc  my_application.cc  my_application.h
dbuschanneltest/linux/libs/: Path.cpp  Path.h
dbuschanneltest/macos/Runner.xcodeproj/: project.pbxproj
dbuschanneltest/test/: widget_test.dart
dbuschanneltest/web/: index.html  manifest.json
dbuschanneltest/windows/: CMakeLists.txt
dbuschanneltest/windows/runner/: Runner.rc  main.cpp
flutter_blue_plus/: .metadata  README.md  pubspec.yaml
flutter_blue_plus/example/: README.md  pubspec.yaml
flutter_blue_plus/linux/: CMakeLists.txt  flutter_blue_plus_plugin.cc  flutter_blue_plus_plugin_private.h  test.cc
flutter_blue_plus/test/: flutter_blue_plus_method_channel_test.dart  flutter_blue_plus_test.dart
(+57 files in other folders)
